productlist layout fixes (#32)
This PR fixes the layout issue for ios app on Search page.
Added rating component.
Added pagination slider.
Search page is working fine now(Ios & android)

--- a/app/home/components/category-menu/category-menu.component.scss
+++ b/app/home/components/category-menu/category-menu.component.scss
@@ -1,14 +1,15 @@
 .box {
   font-weight: bold;
-  font-size: 12em;
-  margin: 5 0 0 5;
+  font-size: 14em;
+  margin: 3dpi;
   position: left top;
   border-radius: 5;
   color: white;
   background-repeat: no-repeat;
-  background-size: 80% 80%;
+  background-size: 80% 90%;
+  
   background-position: right bottom;
   padding-left: 5%;
-  padding-bottom: 100%;
+  padding-bottom: 130%;
   padding-top: 5%;
 }
